basic authentication draft
