# models/AuthResponse.ts
@@ -1,5 +1,0 @@
-export interface AuthResponse {
-    token: string;
-    state: boolean;
-    message: string;
-}
